--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         app:layout_constraintGuide_percent="0.05" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView6"
+        android:id="@+id/cvWeight"
         android:layout_width="0dp"
         android:layout_height="200dp"
         app:cardCornerRadius="45dp"
@@ -63,13 +63,14 @@
                 android:padding="10dp"
                 android:textColor="@color/white"
                 android:textColorHint="@color/hint_white"
-                android:textSize="45sp"
+                android:textSize="40sp"
                 android:textStyle="bold"
                 tools:ignore="TextContrastCheck" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cvHeight"
         android:layout_width="0dp"
         android:layout_height="200dp"
         android:layout_marginTop="32dp"
@@ -77,7 +78,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/cardView6">
+        app:layout_constraintTop_toBottomOf="@+id/cvWeight">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -103,10 +104,66 @@
                 android:padding="10dp"
                 android:textColor="@color/white"
                 android:textColorHint="@color/hint_white"
-                android:textSize="45sp"
+                android:textSize="40sp"
                 android:textStyle="bold"
                 tools:ignore="TextContrastCheck" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cvResult"
+        android:layout_width="0dp"
+        android:visibility="gone"
+        android:layout_height="150dp"
+        android:layout_marginTop="24dp"
+        app:cardBackgroundColor="@color/bg_card"
+        app:cardCornerRadius="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline5"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline4"
+        app:layout_constraintTop_toBottomOf="@+id/cvHeight"
+        app:layout_constraintVertical_bias="0.0">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:textAlignment="center"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textSize="25sp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <Button
+        android:id="@+id/btSubmit"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:padding="20dp"
+        android:text="@string/button_name"
+        android:textStyle="bold"
+        android:backgroundTint="@color/bg_card"
+        android:textSize="24sp"
+        app:cornerRadius="40dp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline5"
+        app:layout_constraintStart_toStartOf="@+id/guideline4"
+        app:layout_constraintTop_toBottomOf="@+id/cvResult" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
