--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -29,8 +33,9 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvWeight"
+        app:cardBackgroundColor="@color/bg_card"
         android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
         app:cardCornerRadius="45dp"
         app:cardElevation="10dp"
         app:cardMaxElevation="20dp"
@@ -39,82 +44,119 @@
         app:layout_constraintStart_toStartOf="@+id/guideline4"
         app:layout_constraintTop_toTopOf="@+id/guideline6">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/bg_card">
 
-            <EditText
-                android:id="@+id/etWeight"
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="20dp"
-                android:autofillHints=""
-                android:background="@null"
-                android:ems="10"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
                 android:gravity="center"
-                android:hint="@string/et_weight"
-                android:inputType="number"
-                android:minHeight="48dp"
-                android:padding="10dp"
-                android:textColor="@color/white"
-                android:textColorHint="@color/hint_white"
-                android:textSize="40sp"
-                android:textStyle="bold"
-                tools:ignore="TextContrastCheck" />
-        </RelativeLayout>
+                >
+
+                <EditText
+                    android:id="@+id/etHeight"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:maxLength="2"
+                    android:background="@null"
+                    android:autofillHints=""
+                    android:paddingEnd="2dp"
+                    android:paddingStart="0dp"
+                    android:ems="10"
+                    android:hint="@string/et_weight"
+                    android:inputType="number"
+                    android:minHeight="48dp"
+                    android:textAlignment="textEnd"
+                    android:textColor="@color/hint_white"
+                    android:textColorHint="@color/hint_white"
+                    android:textSize="45sp"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/tvCm"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="42sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/hint_white"
+                    android:textColorHint="@color/hint_white"
+                    android:paddingStart="2dp"
+                    android:paddingEnd="0dp"
+                    android:layout_weight="1"
+                    android:text="@string/tv_ft"/>
+
+            </LinearLayout>
+
+
+
+
+
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvHeight"
         android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
         android:layout_marginTop="32dp"
+        app:cardBackgroundColor="@color/bg_card"
         app:cardCornerRadius="45dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
         app:layout_constraintTop_toBottomOf="@+id/cvWeight">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/bg_card">
+            android:orientation="horizontal"
+            android:gravity="center"
+            >
 
             <EditText
-                android:id="@+id/etHeight"
-                android:layout_width="match_parent"
+                android:id="@+id/etWeight"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="20dp"
-                android:autofillHints=""
+                android:layout_weight="1"
+                android:maxLength="3"
                 android:background="@null"
+                android:autofillHints=""
+                android:paddingEnd="2dp"
+                android:paddingStart="0dp"
                 android:ems="10"
-                android:gravity="center"
-                android:hint="@string/et_height"
+                android:hint="@string/et_weight"
                 android:inputType="number"
                 android:minHeight="48dp"
-                android:padding="10dp"
-                android:textColor="@color/white"
+                android:textAlignment="textEnd"
+                android:textColor="@color/hint_white"
                 android:textColorHint="@color/hint_white"
-                android:textSize="40sp"
+                android:textSize="45sp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textSize="42sp"
                 android:textStyle="bold"
-                tools:ignore="TextContrastCheck" />
-        </RelativeLayout>
+                android:textColor="@color/hint_white"
+                android:textColorHint="@color/hint_white"
+                android:paddingStart="2dp"
+                android:paddingEnd="0dp"
+                android:layout_weight="1"
+                android:text="@string/tv_kg"/>
+
+        </LinearLayout>
+
+
+
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvResult"
         android:layout_width="0dp"
-        android:visibility="gone"
-        android:layout_height="150dp"
+        android:visibility="visible"
+        android:layout_height="100dp"
         android:layout_marginTop="24dp"
         app:cardBackgroundColor="@color/bg_card"
         app:cardCornerRadius="40dp"
@@ -132,7 +174,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/tvBmiValue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -140,7 +182,7 @@
                 android:textSize="25sp" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/tvBmiResult"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
@@ -159,7 +201,7 @@
         android:text="@string/button_name"
         android:textStyle="bold"
         android:backgroundTint="@color/bg_card"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:cornerRadius="40dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
@@ -167,3 +209,4 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
