edit text property set to decimal value

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,15 +57,15 @@
                     android:id="@+id/etHeight"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:maxLength="2"
+                    android:layout_weight="1.1"
+                    android:maxLength="3"
                     android:background="@null"
                     android:autofillHints=""
                     android:paddingEnd="2dp"
                     android:paddingStart="0dp"
                     android:ems="10"
                     android:hint="@string/et_weight"
-                    android:inputType="number"
+                    android:inputType="numberDecimal"
                     android:minHeight="48dp"
                     android:textAlignment="textEnd"
                     android:textColor="@color/hint_white"
@@ -117,15 +117,15 @@
                 android:id="@+id/etWeight"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:maxLength="3"
+                android:layout_weight="1.1"
+                android:maxLength="4"
                 android:background="@null"
                 android:autofillHints=""
                 android:paddingEnd="2dp"
                 android:paddingStart="0dp"
                 android:ems="10"
                 android:hint="@string/et_weight"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:minHeight="48dp"
                 android:textAlignment="textEnd"
                 android:textColor="@color/hint_white"
@@ -206,6 +206,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
         app:layout_constraintTop_toBottomOf="@+id/cvResult" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
