--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -155,7 +155,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cvResult"
         android:layout_width="0dp"
-        android:visibility="visible"
+        android:visibility="gone"
         android:layout_height="100dp"
         android:layout_marginTop="24dp"
         app:cardBackgroundColor="@color/bg_card"
